<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intenciones</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">User application</string>
    <string name="abrir">abrir página web</string>
    <string name="llamada">llamada de Teléfono</string>
    <string name="googlemaps">Google Maps</string>
    <string name="foto">tomar Foto</string>
    <string name="correo">mandar Correo</string>
</resources>